--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -214,3 +214,36 @@ justify-content: center;
 .course-info {
   padding-bottom: 1.5rem;
 }
+
+/* Thesis exhibit */
+
+.thesis-exhibit-container {
+  width: 100%;
+  display: flex;
+}
+
+.thesis-info-container {
+  width: 60%;
+}
+
+.thesis-video-container {
+  padding: 32px 24px 24px 24px;
+}
+
+video {
+  height: auto;
+  width: 100%;
+}
+
+.thesis-classes-container {
+  width: 40%;
+}
+
+.thesis-image-container {
+  width: 35%;
+    margin: 16px 16px;
+}
+.thesis-image-container img {
+  width: 100%;
+  height: auto;
+}
